[project]
name = "foreign-languages-cards-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]

[tool.ruff]
target-version = "py313"

line-length = 88

exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
    "uv.lock",
]

[tool.ruff.lint]
# Включенные правила
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]